--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="index.html"></script>
 <body>
     
+    <div id="navbar-container"></div>
     <h1>Hello World</h1>
     <p>I'm hosted with GitHub Pages.</p>
 
