--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="navbar-container"></div>
     <h1>Hello World</h1>
     <p>I'm hosted with GitHub Pages.</p>
+    <p>test</p>
 
 </body>
 </html>
