--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 <script src="index.html"></script>
 <body>
     
-    <div id="navbar-container"></div>
+    <nav class="w3-bar w3-flat-teal">
+        <a href="index.html" class="w3-button w3-bar-item">Home</a>
+        <a href="resume.html" class="w3-button w3-bar-item">Resume</a>
+        <a href="contact" class="w3-button w3-bar-item">Contact Me</a>
+    </nav>
+    
     <h1>Hello World</h1>
     <p>I'm hosted with GitHub Pages.</p>
     <p>test</p>
