Updated index.html and script.js

--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
-<link rel="stylesheet" href="style.css"
+<link rel="stylesheet" href="style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="index.html"></script>
+<script src="script.js"></script>
+
 <body>
     
     <nav class="w3-bar w3-teal">
         <a href="index.html" class="w3-button w3-bar-item">Home</a>
         <a href="resume.html" class="w3-button w3-bar-item">Resume</a>
-        <a href="contact" class="w3-button w3-bar-item">Contact Me</a>
+        <a href="mailto:matthew_occleshaw@outlook.com" class="w3-button w3-bar-item" style="float:right">Contact Me</a>
     </nav>
 
     <section style="padding:16px">
         <h1>Hello World</h1>
         <p>I'm hosted with GitHub Pages.</p>
-        <p>test</p>
     </section>
+    <span id="test-span"></span>
 </body>
 </html>
