--- a/index/index.html
+++ b/index/index.html
@@ -13,6 +13,12 @@
     
     <div id="navbar-container"></div>
 
+    <nav class="w3-bar w3-teal">
+        <a href="/index/index.html" class="w3-button w3-bar-item">Home</a>
+        <a href="/resume/resume.html" class="w3-button w3-bar-item">Resume</a>
+        <a href="mailto:matthew_occleshaw@outlook.com" class="w3-button w3-bar-item" style="float:right">Contact Me</a>
+    </nav>
+
     <section style="padding:16px">
         <h1>Hello World</h1>
         <p>I'm hosted with GitHub Pages.</p>
