Navbar jQuery troubleshooting

--- a/index/index.html
+++ b/index/index.html
@@ -6,18 +6,12 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </head>
 
 <body>
     
-    <div id="navbar-container"></div>
-
-    <nav class="w3-bar w3-teal">
-        <a href="/index/index.html" class="w3-button w3-bar-item">Home</a>
-        <a href="/resume/resume.html" class="w3-button w3-bar-item">Resume</a>
-        <a href="mailto:matthew_occleshaw@outlook.com" class="w3-button w3-bar-item" style="float:right">Contact Me</a>
-    </nav>
+    <div id="index-navbar-container"></div>
 
     <section style="padding:16px">
         <h1>Hello World</h1>
