Navbar jQuery troubleshooting

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -10,6 +10,6 @@
 </head>
 
 <body>
-    <div id=#resume-navbar-container></nav>
+    <div id=#resume-navbar-container></div>
     <h1>Resume page</h1>
 </body>
