Navbar jQuery troubleshooting

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id=#resume-navbar-container></div>
+    <div id="resume-navbar-container"></div>
     <h1>Resume page</h1>
     <p>Force update the page</p>
 </body>
