Updated index.html, index.js, resume.html and resume.js (see description)
Changed navbar jQuery include the use classes instead of ids. Changed section elements to div elements. Added titles. Removed some testing/force update page statements.

--- a/index/index.html
+++ b/index/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Home</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -11,12 +12,11 @@
 
 <body>
     
-    <div id="index-navbar-container"></div>
+    <div class="navbar-container"></div>
 
-    <section style="padding:16px">
+    <div style="padding:16px">
         <h1>Hello World</h1>
         <p>I'm hosted with GitHub Pages.</p>
-    </section>
-    <span id="test-span"></span>
+    </div>
 </body>
 </html>
