--- a/resume/resume.html
+++ b/resume/resume.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Resume</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -10,7 +11,8 @@
 </head>
 
 <body>
-    <div id="resume-navbar-container"></div>
-    <h1>Resume page</h1>
-    <p>Force update the page</p>
+    <div style="padding:16px">
+        <div class="navbar-container"></div>
+        <h1>Resume page</h1>
+    </div>
 </body>
