--- a/index/index.html
+++ b/index/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,12 +11,12 @@
 </head>
 
 <body>
-    
+<header>
     <div class="navbar-container"></div>
-
     <div style="padding:16px">
         <h1>Hello World</h1>
         <p>I'm hosted with GitHub Pages.</p>
     </div>
+</header>
 </body>
 </html>
