--- a/resume/resume.html
+++ b/resume/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,8 +11,11 @@
 </head>
 
 <body>
+<header>
     <div class="navbar-container"></div>
     <div style="padding:16px">
         <h1>Resume page</h1>
     </div>
+
+</header>
 </body>
