--- a/resume/resume.html
+++ b/resume/resume.html
@@ -13,8 +13,10 @@
 <body>
 <header>
     <div class="navbar-container"></div>
-    <div style="padding:16px">
-        <h1>Resume page</h1>
+    <div style="height:400px;background-image:url(/images/header-background.jpg);background-size:cover" class="w3-display-container w3-grayscale-min">
+    <div class="w3-display-middle w3-center">
+        <h1 class="w3-text-white" style="font-size:100px">Resume</h1>
+    </div>
     </div>
 
 </header>
