--- a/index/index.html
+++ b/index/index.html
@@ -18,6 +18,7 @@
         <h1 class="w3-text-white" style="font-size:100px">Home</h1>
     </div>
     </div>
+    <span>This is a test</span>>
 </header>
 </body>
 </html>
