Added index.html redirect file and renamed previous index.html and index.js to home.html and index.html

--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,5 @@
 <nav class="w3-bar w3-black">
-    <a href="/index/index.html" class="w3-button w3-bar-item">Home</a>
+    <a href="/home/home.html" class="w3-button w3-bar-item">Home</a>
     <a href="/resume/resume.html" class="w3-button w3-bar-item">Resume</a>
     <a href="mailto:matthew_occleshaw@outlook.com" class="w3-button w3-bar-item" style="float:right">Contact Me</a>
 </nav>
