--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
     <script>
-        window.location.replace("home.html")
+        window.location.replace("/home/home.html")
     </script>
 </head>
 <body>
