Added example text to all pages

--- a/home/home.html
+++ b/home/home.html
@@ -19,5 +19,11 @@
     </div>
     </div>
 </header>
+    <div class = "content-container">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellendus libero odit quidem officiis reprehenderit, aperiam beatae debitis modi ad numquam expedita molestias exercitationem neque quisquam necessitatibus esse fugit rerum!</p>
+        <p>Enim odio quos excepturi ea, sapiente praesentium sint amet alias neque inventore at blanditiis ratione architecto. Possimus provident, aperiam odio saepe obcaecati, quibusdam dolor ut aut atque dolorem tenetur porro.</p>
+        <p>Velit odit blanditiis officia fugiat. Corrupti dolores earum ipsam distinctio ea ipsa dolore voluptates porro maxime autem nam voluptate mollitia officia accusamus nobis ducimus, quo, harum, facere incidunt assumenda eligendi?</p>
+        <p>Incidunt ab, blanditiis nesciunt maiores nostrum ad nobis praesentium quidem ut. Tempora corporis aspernatur laudantium perspiciatis alias vero, quaerat error vitae recusandae maxime enim sed ab dolores nemo animi blanditiis.</p>
+    </div> 
 </body>
 </html>
