--- a/home/index.html
+++ b/home/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="home.js"></script>
+    <script src="/navbar/include_navbar.js"></script>
 </head>
 
 <body>
