Restructured directory and minor .css improvements

--- a/index.html
+++ b/index.html
@@ -2,13 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
-    <script>
-        window.location.replace("/home")
-    </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Home</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
+    <link rel="stylesheet" href="/styles/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/scripts/include_navbar.js"></script>
 </head>
+
 <body>
-    <h1>Redirecting</h1>
+<header>
+    <div class="navbar-container"></div>
+    <div class="w3-display-container w3-grayscale-min header-banner">
+    <div class="w3-display-middle w3-center">
+        <h1 class="w3-text-white" style="font-size:100px">Home</h1>
+    </div>
+    </div>
+</header>
+    <div class = "content-container">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellendus libero odit quidem officiis reprehenderit, aperiam beatae debitis modi ad numquam expedita molestias exercitationem neque quisquam necessitatibus esse fugit rerum!</p>
+        <p>Enim odio quos excepturi ea, sapiente praesentium sint amet alias neque inventore at blanditiis ratione architecto. Possimus provident, aperiam odio saepe obcaecati, quibusdam dolor ut aut atque dolorem tenetur porro.</p>
+        <p>Velit odit blanditiis officia fugiat. Corrupti dolores earum ipsam distinctio ea ipsa dolore voluptates porro maxime autem nam voluptate mollitia officia accusamus nobis ducimus, quo, harum, facere incidunt assumenda eligendi?</p>
+        <p>Incidunt ab, blanditiis nesciunt maiores nostrum ad nobis praesentium quidem ut. Tempora corporis aspernatur laudantium perspiciatis alias vero, quaerat error vitae recusandae maxime enim sed ab dolores nemo animi blanditiis.</p>
+    </div> 
 </body>
 </html>
