--- a/html/resume.html
+++ b/html/resume.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Resume</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="resume.js"></script>
-    <script src="/navbar/include_navbar.js"></script>
+    <script src="/scripts/include_navbar.js"></script>
 </head>
 
 <body>
 <header>
     <div class="navbar-container"></div>
-    <div style="height:400px;background-image:url(/images/header-background.jpg);background-size:cover" class="w3-display-container w3-grayscale-min">
+    <div class="w3-display-container w3-grayscale-min header-banner">
     <div class="w3-display-middle w3-center">
         <h1 class="w3-text-white" style="font-size:100px">Resume</h1>
     </div>
