Begans switching w3.css classes to custom scss

--- a/html/resume.html
+++ b/html/resume.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Resume</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/styles/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/scripts/include_navbar.js"></script>
 </head>
@@ -13,9 +13,9 @@
 <body>
 <header>
     <div class="navbar-container"></div>
-    <div class="w3-display-container w3-grayscale-min header-banner">
+    <div class="w3-display-container header-banner">
     <div class="w3-display-middle w3-center">
-        <h1 class="w3-text-white" style="font-size:100px">Resume</h1>
+        <h1>Resume</h1>
     </div>
     </div>
 </header>
