--- a/html/navbar.html
+++ b/html/navbar.html
@@ -1,5 +1,5 @@
-<nav class="w3-bar w3-black">
-    <a href="/index.html" class="w3-button w3-bar-item">Home</a>
-    <a href="/html/resume.html" class="w3-button w3-bar-item">Resume</a>
-    <a href="mailto:matthew_occleshaw@outlook.com" class="w3-button w3-bar-item" style="float:right">Contact Me</a>
+<nav class="navbar">
+    <a href="/index.html" class="navbar-button">Home</a>
+    <a href="/html/resume.html" class="navbar-button">Resume</a>
+    <a href="mailto:matthew_occleshaw@outlook.com" class="navbar-button float-right">Contact Me</a>
 </nav>
