--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
     <link rel="stylesheet" href="/styles/css/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/scripts/include_navbar.js"></script>
+    <script src="/scripts/main.js"></script>
 </head>
 
 <body>
 <header>
-    <div class="navbar-container"></div>
+    <div id="navbar-container"></div>
     <div class="w3-display-container header-banner">
     <div class="w3-display-middle w3-center">
         <h1>Home</h1>
