Revert "Solution to problem with .addClass"
This reverts commit 7465e2c70303d01d3af39d8a50a4f715f3474aed.

--- a/html/resume.html
+++ b/html/resume.html
@@ -12,11 +12,7 @@
 
 <body>
 <header>
-<nav class="navbar">
-    <a id="home-button" href="/index.html" class="navbar-button">Home</a>
-    <a id="resume-button" href="/html/resume.html" class="navbar-button">Resume</a>
-    <a href="mailto:matthew_occleshaw@outlook.com" class="navbar-button float-right">Contact Me</a>
-</nav>
+    <div id="navbar-container"></div>
     <div class="w3-display-container header-banner">
     <div class="w3-display-middle w3-center">
         <h1>Resume</h1>
