--- a/html/navbar.html
+++ b/html/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-    <a id="home-button" href="/index.html" class="navbar-button active">Home</a>
+    <a id="home-button" href="/index.html" class="navbar-button">Home</a>
     <a id="resume-button" href="/html/resume.html" class="navbar-button">Resume</a>
     <a href="mailto:matthew_occleshaw@outlook.com" class="navbar-button float-right">Contact Me</a>
 </nav>
