--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </div>
 </header>
     <div class = "content-container">
+        <a href="#" onclick="setActivePage()" style-"color:white">Change active button</a>
         <p>
             <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis eligendi dolorem recusandae, sequi alias unde rem expedita itaque, modi a voluptatem aliquam nulla quos temporibus quibusdam commodi. Nemo, repellat voluptates.</span>
             <span>Asperiores architecto, reiciendis quia ab voluptatibus enim dolorem eaque sit vitae quos esse consequatur explicabo perferendis odio dicta praesentium eveniet nisi animi libero amet quasi! Neque nobis quaerat id exercitationem.</span>
