Changed .content-container to main tag

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     </div>
 </header>
-    <div class = "content-container">
+    <main>
         <a href="#" onclick="setActivePage()" style-"color:white">Change active button</a>
         <p>
             <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis eligendi dolorem recusandae, sequi alias unde rem expedita itaque, modi a voluptatem aliquam nulla quos temporibus quibusdam commodi. Nemo, repellat voluptates.</span>
@@ -81,5 +81,6 @@
             <span>Non tempora explicabo, consequuntur natus eligendi impedit dignissimos. Impedit distinctio magni ab quo, suscipit aliquid enim, magnam nobis quidem itaque repudiandae placeat. Voluptate quam id aut provident quod adipisci rem.</span>
             <span>Accusantium neque beatae nihil deleniti, itaque modi nobis adipisci velit tenetur natus autem cupiditate libero cumque laboriosam vitae! Ipsa inventore magnam porro eaque dicta exercitationem rerum facere deserunt veniam quod?</span>
         </p>
+    </main>
 </body>
 </html>
