--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
 <header>
+    <div id="navbar-button"></div>
     <div id="navbar-container"></div>
     <div class="w3-display-container header-banner">
     <div class="w3-display-middle w3-center">
@@ -20,7 +21,6 @@
     </div>
 </header>
     <main>
-        <a href="#" onclick="setActivePage()" style-"color:white">Change active button</a>
         <p>
             <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis eligendi dolorem recusandae, sequi alias unde rem expedita itaque, modi a voluptatem aliquam nulla quos temporibus quibusdam commodi. Nemo, repellat voluptates.</span>
             <span>Asperiores architecto, reiciendis quia ab voluptatibus enim dolorem eaque sit vitae quos esse consequatur explicabo perferendis odio dicta praesentium eveniet nisi animi libero amet quasi! Neque nobis quaerat id exercitationem.</span>
