--- a/html/resume.html
+++ b/html/resume.html
@@ -12,6 +12,7 @@
 
 <body>
 <header>
+    <div id="navbar-button"></div>
     <div id="navbar-container"></div>
     <div class="w3-display-container header-banner">
     <div class="w3-display-middle w3-center">
