--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <body>
 <header>
-    <div id="navbar-button"></div>
+    <div id="navbar-button-container">
+        <img id="navbar-button" src="/images/menu-button-icon.png" alt="Menu Button"></div>
+    </div>
     <div id="navbar-container"></div>
     <div class="w3-display-container header-banner">
     <div class="w3-display-middle w3-center">
