--- a/html/navbar.html
+++ b/html/navbar.html
@@ -3,3 +3,5 @@
     <a id="resume-button" href="/html/resume.html" class="navbar-button">Resume</a>
     <a href="mailto:matthew_occleshaw@outlook.com" class="navbar-button float-right">Contact Me</a>
 </nav>
+
+<span>test</span>
