Finished removing w3.css

--- a/html/resume.html
+++ b/html/resume.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Resume</title>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
     <link rel="stylesheet" href="/styles/css/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/scripts/main.js"></script>
@@ -16,10 +15,8 @@
         <img id="navbar-menu-button" src="/images/menu-button-icon.png" alt="Menu Button"></div>
     </div>
     <div id="navbar-container"></div>
-    <div class="w3-display-container header-banner">
-    <div class="w3-display-middle w3-center">
-        <h1>Resume</h1>
-    </div>
+    <div class="header-banner">
+        <h1 class="header-text">Resume</h1>
     </div>
 </header>
     <main>
