Pure CSS Hamburger

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 
 <body>
 <header>
-    <div id="navbar-menu-button-container">
-        <img id="navbar-menu-button" src="/images/menu-button-icon.png" alt="Menu Button"></div>
+    <div id="navbar-menu-button-bar">
+        <div id="navbar-menu-button-container">
+            <div id="navbar-menu-button">
+                <div></div>
+            </div>
+        </div>
     </div>
     <div id="navbar-container"></div>
     <div class="header-banner">
