Added animation toggling

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
 <header>
-    <div id="navbar-menu-button-bar">
-        <div id="navbar-menu-button-container">
-            <div id="navbar-menu-button">
+    <div class="navbar-menu-button-bar">
+        <div class="navbar-menu-button-container">
+            <div class="navbar-menu-button">
                 <div></div>
             </div>
         </div>
