Added contrasting section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <span>Esse a nulla, explicabo nesciunt aut, amet, in praesentium ea ratione voluptatem cumque quos. Esse quo nihil eius dolores ratione! Earum quam consectetur, consequatur tenetur fuga harum totam molestiae cum.</span>
             <span>Molestiae voluptates et perspiciatis eaque dolor, recusandae ut vel molestias officia saepe delectus, fugit quisquam sint harum mollitia quasi voluptate voluptatum, libero quibusdam quae! Reiciendis aliquam delectus voluptate officiis pariatur.</span>
         </p>
-        <p>
+        <p class="contrasting-section">
             <span>Veniam quos reprehenderit esse sit omnis facilis. Aliquid ut minima error excepturi ad. Accusantium nihil sed, magni obcaecati est perspiciatis reprehenderit porro maxime libero inventore expedita rem magnam placeat aperiam.</span>
             <span>Dolorem necessitatibus omnis incidunt amet, quaerat odit maiores tempore sit ducimus temporibus numquam soluta reprehenderit labore unde expedita nemo perferendis. Consequatur repellat amet commodi fuga voluptas eos corporis, vero exercitationem.</span>
             <span>Maxime commodi, veritatis molestias eligendi eius consequuntur quas et aspernatur ab doloribus esse magni reiciendis corrupti unde accusantium delectus odio itaque quia placeat, quis dolorum eaque ipsam! Voluptatum, earum necessitatibus.</span>
