--- a/index.html
+++ b/index.html
@@ -85,5 +85,6 @@
             <span>Accusantium neque beatae nihil deleniti, itaque modi nobis adipisci velit tenetur natus autem cupiditate libero cumque laboriosam vitae! Ipsa inventore magnam porro eaque dicta exercitationem rerum facere deserunt veniam quod?</span>
         </p>
     </main>
+<footer id="footer"></footer>
 </body>
 </html>
