--- a/html/footer.html
+++ b/html/footer.html
@@ -1,7 +1,7 @@
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, obcaecati harum officiis perspiciatis nesciunt necessitatibus quibusdam architecto eaque officia commodi, distinctio in repellat possimus error maxime! Ea reprehenderit provident fugit.</p>
 <br>
 <div class="footer-icons-container">
-    <img src="/images/GitHub-Mark-Light-32px.png" alt="Github link">
-    <img src="/images/GitHub-Mark-Light-32px.png" alt="Github link">
-    <img src="/images/GitHub-Mark-Light-32px.png" alt="Github link">
+    <a href="https://github.com/matthew-occleshaw" target="_blank"><img src="/images/github-logo.png" alt="Github link"></a>
+    <a href="https://twitter.com/" target="_blank"><img src="/images/twitter-logo.png" alt="Twitter link"></a>
+    <a href="https://uk.linkedin.com/" target="_blank"><img src="/images/linkedin-logo.png" alt="Linkedin link"></a>
 </div>
