--- a/html/footer.html
+++ b/html/footer.html
@@ -1,7 +1,7 @@
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, obcaecati harum officiis perspiciatis nesciunt necessitatibus quibusdam architecto eaque officia commodi, distinctio in repellat possimus error maxime! Ea reprehenderit provident fugit.</p>
+<a href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank">Git Repository</a>
 <br>
 <div class="footer-icons-container">
-    <a href="https://github.com/matthew-occleshaw" target="_blank"><img src="/images/github-logo.png" alt="Github link"></a>
-    <a href="https://twitter.com/" target="_blank"><img src="/images/twitter-logo.png" alt="Twitter link"></a>
-    <a href="https://uk.linkedin.com/" target="_blank"><img src="/images/linkedin-logo.png" alt="Linkedin link"></a>
+    <a class="social-media-icon" href="https://github.com/matthew-occleshaw" target="_blank"><img src="/images/github-logo.png" alt="Github link"></a>
+    <a class="social-media-icon" href="https://twitter.com/" target="_blank"><img src="/images/twitter-logo.png" alt="Twitter link"></a>
+    <a class="social-media-icon" href="https://uk.linkedin.com/" target="_blank"><img src="/images/linkedin-logo.png" alt="Linkedin link"></a>
 </div>
