Fixed error in footer.html

--- a/html/footer.html
+++ b/html/footer.html
@@ -1,4 +1,4 @@
-<a href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank">Git Repository</a>
+<a href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank">GitHub Repository</a>
 <br>
 <div class="footer-icons-container">
     <a class="social-media-icon" href="https://github.com/matthew-occleshaw" target="_blank"><img src="/images/github-logo.png" alt="Github link"></a>
