--- a/html/footer.html
+++ b/html/footer.html
@@ -1,7 +1,7 @@
-<a href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank">GitHub Repository</a>
+<a class="footer-link" href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank">GitHub Repository</a>
 <br>
 <div class="footer-icons-container">
-    <a class="social-media-icon" href="https://github.com/matthew-occleshaw" target="_blank"><img src="/images/github-logo.png" alt="Github link" width="32" height="32"></a>
-    <a class="social-media-icon" href="https://twitter.com/" target="_blank"><img src="/images/twitter-logo.png" alt="Twitter link" width="32" height="32"></a>
-    <a class="social-media-icon" href="https://uk.linkedin.com/" target="_blank"><img src="/images/linkedin-logo.png" alt="Linkedin link" width="32" height="32"></a>
+    <a class="social-media-icon" href="https://github.com/matthew-occleshaw" target="_blank"><img src="/images/github-logo.svg" alt="Github link" width="32" height="32"></a>
+    <a class="social-media-icon" href="https://twitter.com/" target="_blank"><img src="/images/twitter-logo.svg" alt="Twitter link" width="32" height="32"></a>
+    <a class="social-media-icon" href="https://uk.linkedin.com/" target="_blank"><img src="/images/linkedin-logo.svg" alt="Linkedin link" width="32" height="32"></a>
 </div>
