Renamed navbar-menu-button to navbar-hamburger

--- a/html/resume.html
+++ b/html/resume.html
@@ -11,9 +11,9 @@
 
 <body>
 <header>
-    <div class="navbar-menu-button-bar">
-        <div class="navbar-menu-button-container">
-            <div class="navbar-menu-button">
+    <div class="navbar-hamburger-bar">
+        <div class="navbar-hamburger-container">
+            <div class="navbar-hamburger">
                 <div></div>
             </div>
         </div>
