Header now generated and added with js

--- a/html/resume.html
+++ b/html/resume.html
@@ -10,19 +10,7 @@
 </head>
 
 <body>
-<header>
-    <div class="navbar-hamburger-bar">
-        <div class="navbar-hamburger-container">
-            <div class="navbar-hamburger">
-                <div></div>
-            </div>
-        </div>
-    </div>
-    <div id="navbar-container"></div>
-    <div class="header-banner">
-        <h1 class="header-text">Resume</h1>
-    </div>
-</header>
+<header></header>
 <main>
     <p>
         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis eligendi dolorem recusandae, sequi alias unde rem expedita itaque, modi a voluptatem aliquam nulla quos temporibus quibusdam commodi. Nemo, repellat voluptates.</span>
