Switched to using static site builder
Now need to use https://github.com/matthew-occleshaw/personal-site-builder to build website

--- a/html/src/content/index.html
+++ b/html/src/content/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home</title>
@@ -8,23 +10,7 @@
 </head>
 
 <body>
-<header><div class="navbar-hamburger-bar">
-    <div class="navbar-hamburger-container">
-        <div class="navbar-hamburger">
-            <div></div>
-        </div>
-    </div>
-</div>
-<div id="navbar-container">
-    <nav class="navbar">
-        <a id="home-navbar-button" href="/index.html" class="navbar-button active">Home</a>
-        <a id="resume-navbar-button" href="/html/dest/resume.html" class="navbar-button">Resume</a>
-        <a href="mailto:matthew_occleshaw@outlook.com" class="navbar-button float-right">Contact Me</a>
-    </nav>
-</div>
-<div class="header-banner">
-    <h1 id="page-title" class="header-text">Home</h1>
-</div></header>
+<header></header>
 <main>
     <p>
         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis eligendi dolorem recusandae, sequi alias unde rem expedita itaque, modi a voluptatem aliquam nulla quos temporibus quibusdam commodi. Nemo, repellat voluptates.</span>
@@ -87,12 +73,6 @@
         <span>Accusantium neque beatae nihil deleniti, itaque modi nobis adipisci velit tenetur natus autem cupiditate libero cumque laboriosam vitae! Ipsa inventore magnam porro eaque dicta exercitationem rerum facere deserunt veniam quod?</span>
     </p>
 </main>
-<footer id="footer"><a class="footer-link" href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank">GitHub Repository</a>
-<br>
-<div class="footer-icons-container">
-    <a class="social-media-icon" href="https://github.com/matthew-occleshaw" target="_blank"><img src="/images/github-logo.svg" alt="Github link" width="32" height="32"></a>
-    <a class="social-media-icon" href="https://twitter.com/" target="_blank"><img src="/images/twitter-logo.svg" alt="Twitter link" width="32" height="32"></a>
-    <a class="social-media-icon" href="https://uk.linkedin.com/" target="_blank"><img src="/images/linkedin-logo.svg" alt="Linkedin link" width="32" height="32"></a>
-</div></footer>
-
-</body></html>
+<footer id="footer"></footer>
+</body>
+</html>
