--- a/html/dest/resume.html
+++ b/html/dest/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>Resume</title>
     <link rel="stylesheet" href="/styles/css/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/scripts/main.js"></script>
@@ -17,13 +17,13 @@
 </div>
 <div id="navbar-container">
     <nav class="navbar">
-        <a id="home-navbar-button" href="/index.html" class="navbar-button active">Home</a>
-        <a id="resume-navbar-button" href="/html/dest/resume.html" class="navbar-button">Resume</a>
+        <a id="home-navbar-button" href="/index.html" class="navbar-button">Home</a>
+        <a id="resume-navbar-button" href="/html/dest/resume.html" class="navbar-button active">Resume</a>
         <a href="mailto:matthew_occleshaw@outlook.com" class="navbar-button float-right">Contact Me</a>
     </nav>
 </div>
 <div class="header-banner">
-    <h1 id="page-title" class="header-text">Home</h1>
+    <h1 id="page-title" class="header-text">Resume</h1>
 </div></header>
 <main>
     <p>
@@ -38,7 +38,7 @@
         <span>Esse a nulla, explicabo nesciunt aut, amet, in praesentium ea ratione voluptatem cumque quos. Esse quo nihil eius dolores ratione! Earum quam consectetur, consequatur tenetur fuga harum totam molestiae cum.</span>
         <span>Molestiae voluptates et perspiciatis eaque dolor, recusandae ut vel molestias officia saepe delectus, fugit quisquam sint harum mollitia quasi voluptate voluptatum, libero quibusdam quae! Reiciendis aliquam delectus voluptate officiis pariatur.</span>
     </p>
-    <p class="contrasting-section">
+    <p>
         <span>Veniam quos reprehenderit esse sit omnis facilis. Aliquid ut minima error excepturi ad. Accusantium nihil sed, magni obcaecati est perspiciatis reprehenderit porro maxime libero inventore expedita rem magnam placeat aperiam.</span>
         <span>Dolorem necessitatibus omnis incidunt amet, quaerat odit maiores tempore sit ducimus temporibus numquam soluta reprehenderit labore unde expedita nemo perferendis. Consequatur repellat amet commodi fuga voluptas eos corporis, vero exercitationem.</span>
         <span>Maxime commodi, veritatis molestias eligendi eius consequuntur quas et aspernatur ab doloribus esse magni reiciendis corrupti unde accusantium delectus odio itaque quia placeat, quis dolorum eaque ipsam! Voluptatum, earum necessitatibus.</span>
@@ -94,5 +94,6 @@
     <a class="social-media-icon" href="https://twitter.com/" target="_blank"><img src="/images/twitter-logo.svg" alt="Twitter link" width="32" height="32"></a>
     <a class="social-media-icon" href="https://uk.linkedin.com/" target="_blank"><img src="/images/linkedin-logo.svg" alt="Linkedin link" width="32" height="32"></a>
 </div></footer>
+
 
 </body></html>
