Renamed resume to portfolio

--- a/html/dest/portfolio.html
+++ b/html/dest/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Resume</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="/styles/css/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/scripts/main.js"></script>
@@ -18,12 +18,12 @@
 <div id="navbar-container">
     <nav class="navbar">
         <a id="home-navbar-button" href="/index.html" class="navbar-button">Home</a>
-        <a id="resume-navbar-button" href="/html/dest/resume.html" class="navbar-button active">Resume</a>
+        <a id="portfolio-navbar-button" href="/html/dest/portfolio.html" class="navbar-button active">Portfolio</a>
         <a href="mailto:matthew_occleshaw@outlook.com" class="navbar-button float-right">Contact Me</a>
     </nav>
 </div>
 <div class="header-banner">
-    <h1 id="page-title" class="header-text">Resume</h1>
+    <h1 id="page-title" class="header-text">Portfolio</h1>
 </div></header>
 <main>
     <p>
@@ -87,12 +87,12 @@
         <span>Accusantium neque beatae nihil deleniti, itaque modi nobis adipisci velit tenetur natus autem cupiditate libero cumque laboriosam vitae! Ipsa inventore magnam porro eaque dicta exercitationem rerum facere deserunt veniam quod?</span>
     </p>
 </main>
-<footer id="footer"><a class="footer-link" href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank">GitHub Repository</a>
+<footer id="footer"><a class="footer-link" href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank" rel="noopener">GitHub Repository</a>
 <br>
 <div class="footer-icons-container">
-    <a class="social-media-icon" href="https://github.com/matthew-occleshaw" target="_blank"><img src="/images/github-logo.svg" alt="Github link" width="32" height="32"></a>
-    <a class="social-media-icon" href="https://twitter.com/" target="_blank"><img src="/images/twitter-logo.svg" alt="Twitter link" width="32" height="32"></a>
-    <a class="social-media-icon" href="https://uk.linkedin.com/" target="_blank"><img src="/images/linkedin-logo.svg" alt="Linkedin link" width="32" height="32"></a>
+    <a class="social-media-icon" href="https://github.com/matthew-occleshaw" target="_blank" rel="noopener"><img src="/images/github-logo.svg" alt="Github link" width="32" height="32"></a>
+    <a class="social-media-icon" href="https://twitter.com/" target="_blank" rel="noopener"><img src="/images/twitter-logo.svg" alt="Twitter link" width="32" height="32"></a>
+    <a class="social-media-icon" href="https://uk.linkedin.com/" target="_blank" rel="noopener"><img src="/images/linkedin-logo.svg" alt="Linkedin link" width="32" height="32"></a>
 </div></footer>
 
 
