--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div id="navbar-container">
     <nav class="navbar">
         <a id="home-navbar-button" href="/index.html" class="navbar-button active">Home</a>
-        <a id="resume-navbar-button" href="/html/dest/resume.html" class="navbar-button">Resume</a>
+        <a id="portfolio-navbar-button" href="/html/dest/portfolio.html" class="navbar-button">Portfolio</a>
         <a href="mailto:matthew_occleshaw@outlook.com" class="navbar-button float-right">Contact Me</a>
     </nav>
 </div>
@@ -87,12 +87,12 @@
         <span>Accusantium neque beatae nihil deleniti, itaque modi nobis adipisci velit tenetur natus autem cupiditate libero cumque laboriosam vitae! Ipsa inventore magnam porro eaque dicta exercitationem rerum facere deserunt veniam quod?</span>
     </p>
 </main>
-<footer id="footer"><a class="footer-link" href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank">GitHub Repository</a>
+<footer id="footer"><a class="footer-link" href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank" rel="noopener">GitHub Repository</a>
 <br>
 <div class="footer-icons-container">
-    <a class="social-media-icon" href="https://github.com/matthew-occleshaw" target="_blank"><img src="/images/github-logo.svg" alt="Github link" width="32" height="32"></a>
-    <a class="social-media-icon" href="https://twitter.com/" target="_blank"><img src="/images/twitter-logo.svg" alt="Twitter link" width="32" height="32"></a>
-    <a class="social-media-icon" href="https://uk.linkedin.com/" target="_blank"><img src="/images/linkedin-logo.svg" alt="Linkedin link" width="32" height="32"></a>
+    <a class="social-media-icon" href="https://github.com/matthew-occleshaw" target="_blank" rel="noopener"><img src="/images/github-logo.svg" alt="Github link" width="32" height="32"></a>
+    <a class="social-media-icon" href="https://twitter.com/" target="_blank" rel="noopener"><img src="/images/twitter-logo.svg" alt="Twitter link" width="32" height="32"></a>
+    <a class="social-media-icon" href="https://uk.linkedin.com/" target="_blank" rel="noopener"><img src="/images/linkedin-logo.svg" alt="Linkedin link" width="32" height="32"></a>
 </div></footer>
 
 </body></html>
