Remove redundant id from footer

--- a/html/dest/portfolio.html
+++ b/html/dest/portfolio.html
@@ -29,10 +29,11 @@
   <div class="portfolio-parent">
     <div class="portfolio-item">
       <img src="https://www.w3schools.com/w3css/img_lights.jpg">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis odio voluptates a odit! Tempore labore corporis nam excepturi atque necessitatibus rem eligendi aliquam consequuntur consequatur! Inventore, quis quia? Debitis, iusto?</p>
     </div>
   </div>
 </main>
-<footer id="footer"><a class="footer-link" href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank" rel="noopener">GitHub Repository</a>
+<footer><a class="footer-link" href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank" rel="noopener">GitHub Repository</a>
 <br>
 <div class="footer-icons-container">
     <a class="social-media-icon" href="https://github.com/matthew-occleshaw" target="_blank" rel="noopener"><img src="/images/github-logo.svg" alt="Github link" width="32" height="32"></a>
