--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <span>Accusantium neque beatae nihil deleniti, itaque modi nobis adipisci velit tenetur natus autem cupiditate libero cumque laboriosam vitae! Ipsa inventore magnam porro eaque dicta exercitationem rerum facere deserunt veniam quod?</span>
     </p>
 </main>
-<footer id="footer"><a class="footer-link" href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank" rel="noopener">GitHub Repository</a>
+<footer><a class="footer-link" href="https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io" target="_blank" rel="noopener">GitHub Repository</a>
 <br>
 <div class="footer-icons-container">
     <a class="social-media-icon" href="https://github.com/matthew-occleshaw" target="_blank" rel="noopener"><img src="/images/github-logo.svg" alt="Github link" width="32" height="32"></a>
