--- a/html/src/content/portfolio.html
+++ b/html/src/content/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,18 +8,22 @@
   <link rel="stylesheet" href="/styles/css/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="/scripts/main.js"></script>
+  <link rel="shortcut icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/61629073?v=4">
 </head>
 
 <body>
-<header></header>
-<main>
-  <div class="portfolio-parent">
-    <div class="portfolio-item">
-      <img src="https://www.w3schools.com/w3css/img_lights.jpg">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis odio voluptates a odit! Tempore labore corporis nam excepturi atque necessitatibus rem eligendi aliquam consequuntur consequatur! Inventore, quis quia? Debitis, iusto?</p>
+  <header></header>
+  <main>
+    <div class="portfolio-parent">
+      <div class="portfolio-item">
+        <img src="https://www.w3schools.com/w3css/img_lights.jpg">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis odio voluptates a odit! Tempore labore
+          corporis nam excepturi atque necessitatibus rem eligendi aliquam consequuntur consequatur! Inventore, quis
+          quia? Debitis, iusto?</p>
+      </div>
     </div>
-  </div>
-</main>
-<footer></footer>
+  </main>
+  <footer></footer>
 </body>
+
 </html>
